@@ -1,6 +1,6 @@
 graphics = w_profile.eps wt_sigma.eps
 
-EXTRA_DIST = w_profile.gp wt_sigma.gp velo/calc2.data  velo/e1-mm.1.data  velo/e1-mm2.1.data  velo/temp_cor.data  velo/temp_uncor.data  velo/velo_cor.data  velo/velo_uncor.data $(graphics)
+EXTRA_DIST = w_profile.gp wt_sigma.gp velo/calc2.data  velo/e1-mm.1.data  velo/e1-mm2.1.data  velo/temp_cor.data  velo/temp_uncor.data  velo/velo_cor.data  velo/velo_uncor.data
  
 BUILT_SOURCES = $(graphics)
 include $(top_srcdir)/doc/make_doc.rules
