@@ -1,4 +1,4 @@
 graphics = glide.eps glimmer.eps glint_timesteps.eps
-EXTRA_DIST = glide.dia glimmer.dia glint_timesteps.dia $(graphics)
+EXTRA_DIST = glide.dia glimmer.dia glint_timesteps.dia
 BUILT_SOURCES = $(graphics)
 include $(top_srcdir)/doc/make_doc.rules
